--- a/2014/90m paper/experimental_apparatus.tex
+++ b/2014/90m paper/experimental_apparatus.tex
@@ -1,4 +1,4 @@
-\section{Experimental apparatus}
+\section{Experimental Apparatus}
 
 The TOTEM experiment is located at the LHC interaction point (IP) 5 together 
 with the CMS experiment. In this article only the Roman Pot (RP) system, the 
