--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -7,10 +7,10 @@ exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of
 all past experimental data.
 Note however, that a few publications have already reported about hints at 
 slight deviations from this simple behaviour. At the ISR, for $\sqrt{s}$ 
-between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\bar{p}$p data show a 
+between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data show a 
 change of slope~\cite{plb39,plb115} or are better parameterised with quadratic 
 exponential functions, ${\rm e}^{-B |t|-C t^2}$~\cite{npb141,npb248}. 
-At the S$\bar{p}$pS, for 
+At the S$\rm\bar{p}$pS, for 
 $\sqrt{s} = 546\,$GeV, a change of slope at $|t| \approx 0.14\,\rm GeV^{2}$ 
 has been observed, while the inclusion of a quadratic term in the exponent did
 not improve the fit significantly~\cite{plb147}.
