--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -15,36 +15,15 @@
 \def\e{{\rm e}}
 \def\I{{\rm i}}
 \def\T{{\rm T}}
-%\def\vec#1{\mathbf{#1}}
-\def\vec#1{#1} % TODO
+\def\vec#1{\mathbf{#1}}
 \def\mat#1{\mathsf{#1}}
 \def\etal{et al.}
 \def\todo#1{{\color{red} #1}}
 
-%\setbox123\hbox{$0$}
-%\setbox124\hbox{$.$}
-%\def\S{\hbox to\wd123{\hss}}
-%\def\.{\hbox to\wd124{\hss}}
-
-% TODO: needed?
-%\bgroup
-%\catcode`\@=11
-%
-%\gdef\thanksRef#1#2{%
-%    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
-%}
-%\egroup
-
-% TODO: needed?
-%\def\hang{\hangindent=\parindent}
-%\catcode`\>=11
-%\newskip\itskip \itskip2mm
-%\newskip\iitskip \iitskip0mm
-%\newdimen\itindent \itindent3mm
-%\newdimen\iitindent \iitindent5mm
-%\def\>{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{$\bullet$\hss}}}
-%\def\>E{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{\hss}}}
-%\def\>>{\par\vskip\iitskip\parindent\iitindent\indent\hang\llap{\hbox to\iitindent{\hss--\ }}}
+\setbox123\hbox{$0$}
+\setbox124\hbox{$.$}
+\def\S{\hbox to\wd123{\hss}}
+\def\.{\hbox to\wd124{\hss}}
 
 \def\Name#1{\textsc{#1}, }
 \def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
