removed 'improved analysis' statements
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@9711 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -1,10 +1,8 @@
 %----------------------------------------------------------------------------------------------------
 \section{Analysis}
 
-The analysis method is very similar to the previously published 
-ones~\cite{epl101-el,prl111}. Each diagonal is analysed
-separately, relevant steps are performed independently for each bunch. In this 
-analysis, a different normalisation
+The analysis method is similar to the previously published ones~\cite{epl101-el,prl111}, each diagonal is analysed
+separately. However, a different normalisation
 approach is used (Section~\ref{sec:normalisation}), making all 
 $t$-independent scaling factors (e.g.~certain inefficiency corrections)
 irrelevant.
