--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -79,10 +79,10 @@ elastic scattering \sep total cross-section \sep LHC \sep TOTEM
 
 %--------------------------------------------------
 
-%\iffalse
 \section{Conclusions and Outlook}
 %
-Thanks to a very-high statistics data set and an improved analysis technique,
+Thanks to a very-high statistics data set
+%and an improved analysis technique,
 TOTEM has experimentally excluded a purely exponential differential 
 cross-section for elastic proton-proton scattering with more than $7\,\sigma$
 in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
@@ -97,13 +97,6 @@ elastic scattering in the Coulomb-nuclear interference region, providing strong
 constraints on the phenomenological description of the hadronic phase and of 
 the interference mechanism.
 
-
-%new data - high statistics
-%new analysis - only irreducible unc. left - which ones
-%unprecedented precision in a range
-%data exclude pure exponential in that range, two methods, 7sigma
-%extended models for extrapolation to t=0, sigma\_tot compatible to previous TOTEM measurement
-%\fi
 
 %--------------------------------------------------
 
@@ -126,19 +119,24 @@ NKTH-OTKA grant 74458 (Hungary).
 %----------------------------------------------------------------------------------------------------
 \begin{thebibliography}{99}
 %
-\bibitem{plb39} \Name{G. Barbiellini et al.} \REVIEW{Phys.~Lett.}{B39}{1972}{663}.
-\bibitem{plb115} \Name{M. Ambrosio et al.} \REVIEW{Phys.~Lett.}{B115}{1982}{495}.
-\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}.
-\bibitem{npb248} \Name{A. Breakstone et al.} \REVIEW{Nucl.~Phys.}{B248}{1984}{253}.
-\bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
+\bibitem{plb39} \Name{G. Barbiellini et al.} \REVIEW{Phys.~Lett.}{B39}{1972}{663}
+
+\bibitem{plb115} \Name{M. Ambrosio et al.} \REVIEW{Phys.~Lett.}{B115}{1982}{495}
+
+\bibitem{npb141} \Name{L. Baksay et al.} \REVIEW{Nucl.~Phys.}{B141}{1978}{1}
+
+\bibitem{npb248} \Name{A. Breakstone et al.} \REVIEW{Nucl.~Phys.}{B248}{1984}{253}
+
+\bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}
+
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
+
 \bibitem{epl101-el}
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
-
 
 \bibitem{prl111} 
 	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
@@ -171,7 +169,8 @@ NKTH-OTKA grant 74458 (Hungary).
 	\Name{G.D.~Lafferty~and T.R.~Wyatt}
 	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
-\bibitem{1km} \Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
+\bibitem{1km}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
         Measurement of Elastic pp Scattering at $\sqrt{s}=8\,$TeV in the 
         Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
         CERN LHC, this journal.
