--- a/2013/1km paper/data_table.tex
+++ b/2013/1km paper/data_table.tex
@@ -11,7 +11,7 @@
 The elastic differential cross-section as determined in this analysis. The representative point of a bin gives the $t$ value suitable for fitting \cite{lafferty94}.
 %uncertainty due to different fit models negligible:$10^{-7}\un{GeV^2}$
 For the differential cross-section, its value, statistical and systematic uncertainty (including all sources) are reported, followed by details of the leading systematic contributions (see Figure \ref{fig:syst unc} and Section \ref{sec:final data merging}).
-\todo{UPDATE points at the end}
+\todo{UPDATE points at the end, which binning to use?, check for accuracy loss due to rounding!}
 }
 \label{tab:data}
 \begin{center}
@@ -88,26 +88,7 @@ $0.0441\S\S$ & $0.0457\S\S$ & $0.0449\S\S$ & $\S220.\S\S$ & $\S\S3.11$ & $\S9.06
 $0.0457\S\S$ & $0.0475\S\S$ & $0.0466\S\S$ & $\S214.\S\S$ & $\S\S3.06$ & $\S8.76$ & $+\S8.75$ & $+0.241$ & $+0.019$ & $+0.044$ & $+0.142$ & $-\S0.007$ \cr
 $0.0475\S\S$ & $0.0492\S\S$ & $0.0483\S\S$ & $\S206.\S\S$ & $\S\S3.00$ & $\S8.46$ & $+\S8.46$ & $+0.248$ & $+0.001$ & $+0.030$ & $+0.174$ & $-\S0.006$ \cr
 $0.0492\S\S$ & $0.0510\S\S$ & $0.0501\S\S$ & $\S200.\S\S$ & $\S\S2.95$ & $\S8.17$ & $+\S8.17$ & $+0.254$ & $-0.000$ & $+0.015$ & $+0.203$ & $-\S0.005$ \cr
-\hline
-\hline
-\end{tabular}
-\end{center}
-\vskip-10mm
-\end{table*}
-
-
-\begin{table*}
-\label{tab:data_ext}
-\begin{center}
-\todo{UPDATE points at the end}
-\small
-\setlength{\tabcolsep}{3.5pt}
-\def\arraystretch{0.01}
-\begin{tabular}{ccc@{\hskip15pt}ccccccccc}
-\hline
-\hline
-\tableHeader
-\hline
+%
 $0.0510\S\S$ & $0.0528\S\S$ & $0.0519\S\S$ & $\S191.\S\S$ & $\S\S2.88$ & $\S7.89$ & $+\S7.88$ & $+0.256$ & $-0.009$ & $+0.001$ & $+0.224$ & $-\S0.006$ \cr
 $0.0528\S\S$ & $0.0547\S\S$ & $0.0537\S\S$ & $\S187.\S\S$ & $\S\S2.83$ & $\S7.61$ & $+\S7.60$ & $+0.258$ & $-0.017$ & $-0.010$ & $+0.245$ & $-\S0.005$ \cr
 $0.0547\S\S$ & $0.0565\S\S$ & $0.0556\S\S$ & $\S179.\S\S$ & $\S\S2.77$ & $\S7.34$ & $+\S7.33$ & $+0.258$ & $-0.026$ & $-0.023$ & $+0.263$ & $-\S0.005$ \cr
@@ -154,4 +135,5 @@ $0.192\S\S\S$ & $0.202\S\S\S$ & $0.197\S\S\S$ & $\S\S11.1\S$ & $\S\S0.80$ & $\S0
 \hline
 \end{tabular}
 \end{center}
+\vskip-10mm
 \end{table*}
