--- a/2013/1km paper/data_taking.tex
+++ b/2013/1km paper/data_taking.tex
@@ -1,4 +1,5 @@
 \section{Data taking}
+\label{sec:datataking}
 %
 The results reported here are based on data taken in October 2012 
 in a dedicated LHC proton fill (3216)
