--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -1,31 +1,52 @@
 \section{Introduction}
 %
-Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions generates a scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. 
+Elastic scattering of protons is a process mediated by the strong and the electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum transfers, $|t|$, typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions is described by a complex scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, the superposition 
+of the two amplitudes generates an interference term in the combined interaction cross-section. 
 
-Moreover, since the interactions act simultaneously, their interference needs to be taken into account, too. 
+The Coulomb amplitude can be calculated from QED (e.g.~Section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
 
-The Coulomb amplitude can be calculated from QED (e.g.~section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
-
-
-Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, otherwise not directly observable in the differential cross-section. Hence the experimental sensitivity to 
-this phase, which for general nuclear amplitudes is a function of $t$, is 
-limited to the region of very small $|t|$, and in past 
-experiments (see e.g.~\cite{} from ISR onwards) 
-only the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
-equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was determined. 
-Most of the interest in $\rho$ relies in its predictive power on total 
-cross-sections at higher centre-of-mass energies via dispersion 
+Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
+the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
+is limited to a region at very small $|t|$, making any conclusions on the 
+functional form of the phase very difficult.
+In the analyses of past experiments (see e.g.~\cite{} from ISR onwards) 
+typically a strongly simplified interference formula was used. This so-called
+Simplified West-Yennie (SWY) formula~\cite{} is based on restrictive assumptions on the 
+hadronic amplitude, implying in particular a purely exponential modulus and a 
+constant phase for all $t$ (see the discussion in 
+Section~\ref{sec:cni_framework}).
+As result, traditionally the phase value $\arg {\cal A}^{\rm N} (t=0)$, or
+equivalently, $\rho \equiv \cot \, \arg {\cal A}^{\rm N} (0) = \frac{{\cal R A}^{\rm N} (0)}{{\cal I A}^{\rm N} (0)}$ was quoted. 
+Most of the interest in $\rho$ lies in its predictive power on total cross-sections at higher centre-of-mass energies via dispersion 
 relations~\cite{dremin-dispersion}. 
 
-\textbf{...WORKING...}
+The present article discusses the first measurement of elastic scattering in the
+CNI region at the CERN LHC by the TOTEM experiment. 
+The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics 
+($\beta^{*}=1000\,$m, see Section~\ref{sec:datataking}) and cover a $|t|$-interval
+from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, thus overlapping comfortably
+with another data set taken at the same energy but with different beam optics
+($\beta^{*}=90\,$m; 0.027\,GeV$^{2} < |t| < 0.2\,$GeV$^{2}$). The analysis of the
+latter~\cite{} excludes a purely exponential hadronic elastic scattering
+amplitude with more than $7\,\sigma$ confidence and thereby also excludes
+one of the conditions for the applicability of the SWY formula.
+Therefore the more general and complex Kundrat-Lokajicek (KL) interference 
+formula is applied in the present study, which offers much more freedom for the
+choice of the theoretically unknown functional forms of the hadronic modulus 
+and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
+expressed in
+terms of $\rho$, become conditional to the choice of amplitude models.
+In order to optimally exploit the information of all available data, the two 
+data sets are analysed in a combined way, providing complementary constraints:
+The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
+hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
+$|t|$ determines phase parameters.
 
 
-\todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
-
-
-\> motivation for low-$|t|$ measurement
-\>> why it is important and interesting
-
-\> historical context, previous measurements
-
-\> explain structure: first 1000m measurement, then CNI analysis (where also 90m data will be used)
+%\todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
+%\> motivation for low-$|t|$ measurement
+%\>> why it is important and interesting
+%
+%\> historical context, previous measurements
+%
+%\> explain structure: first 1000m measurement, then CNI analysis (where also 90m data will be used)
