--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -5,13 +5,13 @@ of the two amplitudes generates an interference term in the combined interaction
 
 The Coulomb amplitude can be calculated from QED (e.g.~Section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~Section 1.3.1 in~\cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be described by a single function ${\cal F}$. 
 
-Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
+Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, which is necessary for a complete understanding of the interaction but not directly observable in the pure hadronic differential cross-section. The interference effect is most pronounced in the $t$-region where the two amplitudes have similar magnitudes, i.e. -- for typical LHC centre-of-mass energies of a few TeV -- near $t \sim 5 \times 10^{-4}\,\rm GeV^{2}$. Thus the experimental sensitivity to 
 the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
 is limited to a region at very small $|t|$, making any conclusions on the 
 functional form of the phase very difficult.
 In the analyses of past experiments (see e.g.~\cite{} from ISR onwards) 
 typically a strongly simplified interference formula was used. This so-called
-Simplified West-Yennie (SWY) formula~\cite{} is based on restrictive assumptions on the 
+Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
 constant phase for all $t$ (see the discussion in 
 Section~\ref{sec:cni_framework}).
@@ -27,20 +27,22 @@ The data have been collected at $\sqrt{s} = 8\,$TeV with a special beam optics
 from $6\times10^{-4}\,\rm GeV^{2}$ to 0.2\,GeV$^{2}$, thus overlapping comfortably
 with another data set taken at the same energy but with different beam optics
 ($\beta^{*}=90\,$m; 0.027\,GeV$^{2} < |t| < 0.2\,$GeV$^{2}$). The analysis of the
-latter~\cite{} excludes a purely exponential hadronic elastic scattering
+latter~\cite{8tev-90m} excludes a purely exponential hadronic elastic scattering
 amplitude with more than $7\,\sigma$ confidence and thereby also excludes
 one of the conditions for the applicability of the SWY formula.
 Therefore the more general and complex Kundrat-Lokajicek (KL) interference 
-formula is applied in the present study, which offers much more freedom for the
+formula~\cite{kl94} is applied in the present study, which offers much more freedom for the
 choice of the theoretically unknown functional forms of the hadronic modulus 
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
-expressed in
-terms of $\rho$, become conditional to the choice of amplitude models.
+expressed in terms of $\rho$, become conditional to the choice of amplitude models. Finally, each of these choices will be interpreted in impact parameter space.
+
 In order to optimally exploit the information of all available data, the two 
 data sets are analysed in a combined way, providing complementary constraints:
 The $\beta^{*}=90\,$m set with very high statistics at higher $|t|$ fixes the 
 hadronic modulus, whereas the $\beta^{*}=1000\,$m set with its reach to very low
 $|t|$ determines phase parameters.
+
+
 
 
 %\todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
