--- a/2013/1km paper/introduction.tex
+++ b/2013/1km paper/introduction.tex
@@ -9,7 +9,8 @@ Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exp
 the nuclear phase, which for general nuclear amplitudes is a function of $t$, 
 is limited to a region at very small $|t|$, making any conclusions on the 
 functional form of the phase very difficult.
-In the analyses of past experiments (see e.g.~\cite{} from ISR onwards) 
+In the analyses of past experiments (see e.g.~\cite{plb43,plb66,npb141,prl47,plb115,plb120,plb128,npb262} 
+(ISR),~\cite{plb198,plb316} (S$\bar{\un p}$pS),~\cite{prl68} (Tevatron)) 
 typically a strongly simplified interference formula was used. This so-called
 Simplified West-Yennie (SWY) formula~\cite{wy68} is based on restrictive assumptions on the 
 hadronic amplitude, implying in particular a purely exponential modulus and a 
@@ -30,11 +31,12 @@ with another data set taken at the same energy but with different beam optics
 latter~\cite{8tev-90m} excludes a purely exponential hadronic elastic scattering
 amplitude with more than $7\,\sigma$ confidence and thereby also excludes
 one of the conditions for the applicability of the SWY formula.
-Therefore the more general and complex Kundrat-Lokajicek (KL) interference 
+Therefore the more general and complex Kundr\'{a}t-Lokaj\'{\i}\v{c}ek (KL) interference 
 formula~\cite{kl94} is applied in the present study, which offers much more freedom for the
 choice of the theoretically unknown functional forms of the hadronic modulus 
 and phase. Since the data cannot unambiguously determine all functional forms and their parameters, the results of this study, still representatively 
-expressed in terms of $\rho$, become conditional to the choice of amplitude models. Finally, each of these choices will be interpreted in impact parameter space.
+expressed in terms of $\rho$, become conditional to the choice of amplitude models. Each of these choices implies a different behaviour of the interaction 
+in impact parameter space.
 
 In order to optimally exploit the information of all available data, the two 
 data sets are analysed in a combined way, providing complementary constraints:
