--- a/2013/1km paper/elastic_1km_epjc.tex
+++ b/2013/1km paper/elastic_1km_epjc.tex
@@ -1,4 +1,4 @@
-\documentclass[pdftex,twocolumn,epjc3]{svjour3}
+\documentclass[twocolumn,epjc3]{svjour3}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -143,6 +143,52 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
+\bibitem{block06}
+	\Name{BLOCK, M. M.}
+	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
+	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
+	%doi       = "10.1016/j.physrep.2006.06.003",
+
+\bibitem{puckett10}
+	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
+	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
+	arXiv:nucl-ex/1008.0855 (2010)
+
+\bibitem{jan_thesis}
+	\Name{Ka\v spar J.}
+	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
+
+\bibitem{plb43} U. Amaldi et al., Phys. Lett. B 43 (1973) 231-236.
+
+\bibitem{plb66} U. Amaldi et al., Phys. Lett. B 66 (1977) 390-394.
+
+\bibitem{npb141} L. Baksay et al., Nucl. Phys. B 141 (1978) 1-28.
+
+\bibitem{prl47} D. Favart et al., Phys. Rev. Lett. 47 (1981) 1191-1194.
+
+\bibitem{plb115} M. Ambrosio et al., Phys. Lett. B 115 (1982) 495-502.
+
+\bibitem{plb120} N. Amos et al., Phys. Lett. B 120 (1983) 460-464.
+
+\bibitem{plb128} N. Amos et al., Phys. Lett. B 128 (1983) 343-348.
+
+\bibitem{npb262} N. Amos et al., Nucl. Phys. B 262 (1985) 689-714.
+
+\bibitem{plb198} D. Bernard et al., Phys. Lett. B 198 (1987) 583-589.
+
+\bibitem{plb316} C. Augier et al., Phys. Lett. B 316 (1993) 448-454.
+
+\bibitem{prl68} N.A. Amos et al., Phys. Rev. Lett. 68 (1992) 2433–2436.
+
+
+\bibitem{wy68}
+	\Name{WEST, G. B. and YENNIE, D. R.}
+	%title     = "Coulomb interference in high-energy scattering",
+	\REVIEW{Phys. Rev.}{172}{1968}{1413--1422}
+	%doi       = "10.1103/PhysRev.172.1413",
+
+\bibitem{dremin-dispersion} I.M. Dremin, JETP Lett. 97 (2013) 571-573, arXiv:1304.5345; and references therein.
+
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
@@ -193,32 +239,11 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
 
-\bibitem{wy68}
-	\Name{WEST, G. B. and YENNIE, D. R.}
-	%title     = "Coulomb interference in high-energy scattering",
-	\REVIEW{Phys. Rev.}{172}{1968}{1413--1422}
-	%doi       = "10.1103/PhysRev.172.1413",
-
 \bibitem{bailly87}
 	%title={An impact parameter analysis of proton-proton elastic and inelastic interactions at 360 GeV/c}
 	\Name{Bailly, J.L.~\etal{}(EHS-RCBC Collaboration)}
 	\REVIEW{Z.~Phys.~C}{37}{1987}{7--16}
 	%url={http://dx.doi.org/10.1007/BF01442063}
-
-\bibitem{puckett10}
-	\Name{PUCKETT, A. J. R.~\etal{}(GEp-III Collaboration)}
-	Final Results of the GEp-III Experiment and the Status of the Proton Form Factors,
-	arXiv:nucl-ex/1008.0855 (2010)
-
-\bibitem{block06}
-	\Name{BLOCK, M. M.}
-	%Hadronic forward scattering: Predictions for the Large Hadron Collider and cosmic rays
-	\REVIEW{Phys. Rept.}{436}{2006}{71--215}
-	%doi       = "10.1016/j.physrep.2006.06.003",
-
-\bibitem{jan_thesis}
-	\Name{Ka\v spar J.}
-	PhD Thesis, CERN-THESIS-2011-214, {\tt http://cdsweb.cern.ch/record/1441140}
 
 \bibitem{klk02}
 	%title = "Impact parameter structure derived from elastic collisions ",
