--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -5,8 +5,6 @@
 \subsection{Theoretical framework}
 \label{sec:cni_framework}
 
-Elastic scattering of protons is a process caused by the strong and electromagnetic interactions -- the weak interaction can be neglected since its carriers are heavy compared to the small momentum-transfers typical for elastic scattering. In this context, the strong interaction is traditionally called nuclear and the electromagnetic called Coulomb. In quantum-theory description, each of the interactions generates a scattering amplitude, nuclear ${\cal A}^{\rm N}$ and Coulomb ${\cal A}^{\rm C}$. Moreover, since the interactions act simultaneously, their interference needs to be taken into account, too. The Coulomb amplitude can be calculated from QED (e.g.~section 3.2 in \cite{block06}), using empirical electric and magnetic form factors of the proton (e.g.~\cite{puckett10}). It can be shown (e.g.~section 1.3.1 in \cite{jan_thesis}) that, at low $|t|$, the effect of both form factors can be describe by a single function ${\cal F}$. Since the Coulomb amplitude is known, the Coulomb-nuclear interference (CNI) exposes the phase of the nuclear amplitude, otherwise not directly observable in differential cross-section. \todo{why phase interesting?} \todo{introduce: coulomb-interference formula}
-
 
 %----------------------------------------------------------------------------------------------------
 \subsubsection{Nuclear amplitude}
@@ -136,10 +134,10 @@ where $\vec\Delta$ represents vector of differences in $\d\sigma/\d t$ between f
 
 \> RMS of b for the final fits
 
-\iffalse
 \begin{figure*}
 \begin{center}
-\includegraphics[width=16cm]{fig/rho_s.pdf}
+%\includegraphics[width=16cm]{fig/rho_s.pdf}
+\vspace*{3cm}
 \vskip-3mm
 \caption{$\rho$ as a function of $s$.}
 \label{fig:rho_s}
@@ -147,7 +145,7 @@ where $\vec\Delta$ represents vector of differences in $\d\sigma/\d t$ between f
 \end{figure*}
 
 \> figure for $\sigma_{\rm tot}$ result ??
-\fi
+
 
 
 
