--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -7,8 +7,8 @@ exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of
 all past experimental data.
 Note however, that a few publications have already reported about hints at 
 slight deviations from this simple behaviour. At the ISR, for $\sqrt{s}$ 
-between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data show a 
-change of slope~\cite{plb39,plb115} or are better parameterised with quadratic 
+between 21.5\,GeV and 52.8\,GeV, elastic pp and partly $\rm\bar{p}$p data have shown a 
+change of slope~\cite{plb39,plb115} or have been better parameterised with quadratic 
 exponential functions, ${\rm e}^{-B |t|-C t^2}$~\cite{npb141,npb248}. 
 At the S$\rm\bar{p}$pS, for 
 $\sqrt{s} = 546\,$GeV, a change of slope at $|t| \approx 0.14\,\rm GeV^{2}$ 
@@ -22,4 +22,4 @@ This report presents a new data sample of elastic scattering at the energy of $\
 %and an improved analysis technique
 an unprecedented precision has been reached in the region of four-momentum transfer squared $|t| \lesssim 0.2\un{GeV^2}$. Both statistical and systematic components of the differential cross-section uncertainty are controlled 
 at a level below $1\un{\%}$, except for the normalisation 
-(Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, extrapolation to $t=0$, used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended models are provided, still yielding total cross-section values compatible with previous TOTEM results~\cite{prl111}.
+(Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, extrapolation to $t=0$, used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended parameterisations are provided, still yielding total cross-section values compatible with previous TOTEM results~\cite{prl111}.
